--- a/myproject/css/style.css
+++ b/myproject/css/style.css
@@ -203,3 +203,86 @@ a {
 ::-webkit-resizer { //多行文字欄位右下縮放按鈕
     background-color:$lesser-4;
 }  */
+
+/* 手機版選單列樣式 */
+.navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  
+  /* 漢堡按鈕  */
+  .hamburger {
+    margin-bottom: 10px;
+    /*  修改button預設樣式  */
+    background-color: transparent;
+    border: none;
+  }
+  
+  .bar {
+    display: block;
+    width: 24px;
+    height: 3px;
+    background-color: #333;
+    margin: 5px auto;
+    transition: 0.35s;
+  }
+  
+  /* 三 變換為 X */
+  .hamburger.is-active .bar:nth-child(1) {
+    transform: rotate(45deg) translateY(11px);
+  }
+  .hamburger.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.is-active .bar:nth-child(3) {
+    transform: rotate(-45deg) translateY(-11px);
+  }
+  
+  .navigation {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    animation: hide 0.35s both;
+  }
+  .navigation.show {
+    display: flex;
+    animation: show 0.35s both;
+  }
+  @keyframes hide {
+    from { 
+      opacity: 1;  
+      display: flex; /*動態顯示*/
+    }
+    to   { 
+      opacity: 0;  
+      display: none;/*動態消失*/ 
+    }
+  }
+  
+  @keyframes show {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+  }
+  
+  .menu {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 30px;
+    border-radius: 15px;
+  }
+  .menu a {
+    color: white;
+    margin: 20px;
+  }
+  .icon {
+    display: flex;
+    order: 1;
+    padding: 15px;
+  }
+  .icon a {
+    width: 35px;
+    margin: 0 5px;
+  }
