--- a/myproject/css/style.css
+++ b/myproject/css/style.css
@@ -1,179 +1,84 @@
-@import url('https://fonts.googleapis.com/css2?family=Galada&family=Kaushan+Script&family=LXGW+WenKai+Mono+TC&&family=Kaushan+Script&+TC&family=Montserrat&display=swap');
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Galada&family=Kaushan+Script&family=LXGW+WenKai+Mono+TC&&family=Kaushan+Script&+TC&family=Montserrat&display=swap");
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family:
-        /*西文*/
-        -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Helvetica, Arial,
-        /*中文*/
-        "蘋方-繁", "PingFang TC", "黑體-繁", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans TC", sans-serif;
-    font-optical-sizing: auto;
-    /* 光學尺寸 */
-    line-height: 1.2;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Helvetica, Arial, "蘋方-繁", "PingFang TC", "黑體-繁", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans TC", sans-serif;
+  font-optical-sizing: auto;
+  /* 光學尺寸 */
+  line-height: 1.2;
 }
 
 /* 重置標題字重 */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: normal;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
 }
 
 /* 重置清單符號 */
-ol,
-ul {
-    list-style: none;
+ol, ul {
+  list-style: none;
 }
 
 /* 重置圖片 */
 img {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 /* 重置連接 */
 a {
-    display: block;
-    /* 將a預設inline改為block，才能設定間距及寬高 */
-    color: #222;
-    text-decoration: none;
+  display: block;
+  /* 將a預設inline改為block，才能設定間距及寬高 */
+  color: #222;
+  text-decoration: none;
 }
 
 /* 頁首區 */
 #topbar {
-    /* 固定視窗 */
-    position: fixed;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    /* position的寬度會改為自動抓內容尺寸 */
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px 50px;
+  /* 固定視窗 */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  /* position的寬度會改為自動抓內容尺寸 */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 20px 50px;
+  /* LOGO */
+  /* menu 欄位 */
 }
-
 #topbar .logo {
-    width: 50px;
+  width: 60px;
 }
-
-/* menu 欄位 */
-#topbar .navigation .menu {
-    /* font-family: 'Kaushan Script', cursive; */
-    font-family: Montserrat, sans-serif;
-    display: flex;
-    border-radius: 50px;
-    padding: 0 10px;
-    margin-top: 10px;
+#topbar .navigation-home .menu {
+  /* font-family: 'Kaushan Script', cursive; */
+  font-family: Montserrat, sans-serif;
+  display: flex;
+  border-radius: 50px;
+  padding: 0 10px;
+  margin-top: 10px;
 }
-
-#topbar .navigation .menu a {
-    margin: 10px;
-    padding: 7px 0 5px;
-    border-bottom: 2px solid transparent;
-    text-shadow: 0 0 2px rgba(255, 255, 255, 0.3);
-    transition: 0.4s;
+#topbar .navigation-home .menu a {
+  margin: 10px;
+  padding: 7px 0 5px;
+  border-bottom: 2px solid transparent;
+  text-shadow: 0 0 2px rgba(255, 255, 255, 0.3);
+  transition: 0.4s;
 }
-
-#topbar .navigation .menu a:hover {
-    border-bottom: 2px solid #666;
-    color: #444;
+#topbar .navigation-home .menu a:hover {
+  border-bottom: 2px solid #666;
+  color: #444;
 }
-
 
 /* 卷軸樣式 */
 /* ::-webkit-scrollbar {
@@ -203,86 +108,80 @@ a {
 ::-webkit-resizer { //多行文字欄位右下縮放按鈕
     background-color:$lesser-4;
 }  */
-
 /* 手機版選單列樣式 */
 .navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+/* 漢堡按鈕  */
+.hamburger {
+  margin-bottom: 10px;
+  /*  修改button預設樣式  */
+  background-color: transparent;
+  border: none;
+}
+.hamburger .bar {
+  display: block;
+  width: 24px;
+  height: 3px;
+  background-color: #333;
+  margin: 5px auto;
+  transition: 0.35s;
+}
+
+/* 三 變換為 X */
+.hamburger.is-active .bar:nth-child(1) {
+  transform: rotate(45deg) translateY(11px);
+}
+.hamburger.is-active .bar:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.is-active .bar:nth-child(3) {
+  transform: rotate(-45deg) translateY(-11px);
+}
+
+.navigation {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  animation: hide 0.35s both;
+}
+.navigation .menu {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 30px;
+  border-radius: 15px;
+}
+.navigation .menu a {
+  color: white;
+  margin: 20px;
+}
+.navigation.show {
+  display: flex;
+  animation: show 0.35s both;
+}
+
+@keyframes hide {
+  from {
+    opacity: 1;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    /*動態顯示*/
   }
-  
-  /* 漢堡按鈕  */
-  .hamburger {
-    margin-bottom: 10px;
-    /*  修改button預設樣式  */
-    background-color: transparent;
-    border: none;
+  to {
+    opacity: 0;
+    display: none;
+    /*動態消失*/
   }
-  
-  .bar {
-    display: block;
-    width: 24px;
-    height: 3px;
-    background-color: #333;
-    margin: 5px auto;
-    transition: 0.35s;
-  }
-  
-  /* 三 變換為 X */
-  .hamburger.is-active .bar:nth-child(1) {
-    transform: rotate(45deg) translateY(11px);
-  }
-  .hamburger.is-active .bar:nth-child(2) {
+}
+@keyframes show {
+  from {
     opacity: 0;
   }
-  .hamburger.is-active .bar:nth-child(3) {
-    transform: rotate(-45deg) translateY(-11px);
+  to {
+    opacity: 1;
   }
-  
-  .navbar .navigation {
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    animation: hide 0.35s both;
-  }
-  .navbar .navigation.show {
-    display: flex;
-    animation: show 0.35s both;
-  }
-  @keyframes hide {
-    from { 
-      opacity: 1;  
-      display: flex; /*動態顯示*/
-    }
-    to   { 
-      opacity: 0;  
-      display: none;/*動態消失*/ 
-    }
-  }
-  
-  @keyframes show {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-  }
-  
-  .navbar .menu {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 30px;
-    border-radius: 15px;
-  }
-  .navbar .menu a {
-    color: white;
-    margin: 20px;
-  }
-  .navbar .icon {
-    display: flex;
-    order: 1;
-    padding: 15px;
-  }
-  .navbar .icon a {
-    width: 35px;
-    margin: 0 5px;
-  }
+}/*# sourceMappingURL=style.css.map */
