--- a/myproject/css/style.scss
+++ b/myproject/css/style.scss
@@ -63,33 +63,34 @@ a {
   align-items: center;
   padding: 20px 50px;
 
+  /* LOGO */
   .logo {
-    width: 65px;
+    width: 60px;
   }
 
-  .navigation .menu {
+  /* menu 欄位 */
+
+  .navigation-home .menu {
     /* font-family: 'Kaushan Script', cursive; */
     font-family: Montserrat, sans-serif;
     display: flex;
     border-radius: 50px;
     padding: 0 10px;
     margin-top: 10px;
+    a {
+      margin: 10px;
+      padding: 7px 0 5px;
+      border-bottom: 2px solid transparent;
+      text-shadow: 0 0 2px rgba(255, 255, 255, 0.3);
+      transition: 0.4s;
+    }
+
+    a:hover {
+      border-bottom: 2px solid #666;
+      color: #444;
+    }
+    
   }
-}
-
-/* menu 欄位 */
-
-.navigation .menu a {
-  margin: 10px;
-  padding: 7px 0 5px;
-  border-bottom: 2px solid transparent;
-  text-shadow: 0 0 2px rgba(255, 255, 255, 0.3);
-  transition: 0.4s;
-}
-
-#topbar .navigation .menu a:hover {
-  border-bottom: 2px solid #666;
-  color: #444;
 }
 
 /* 卷軸樣式 */
@@ -137,15 +138,15 @@ a {
   /*  修改button預設樣式  */
   background-color: transparent;
   border: none;
-}
 
-.bar {
-  display: block;
-  width: 24px;
-  height: 3px;
-  background-color: #333;
-  margin: 5px auto;
-  transition: 0.35s;
+  .bar {
+    display: block;
+    width: 24px;
+    height: 3px;
+    background-color: #333;
+    margin: 5px auto;
+    transition: 0.35s;
+  }
 }
 
 /* 三 變換為 X */
@@ -171,6 +172,18 @@ a {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   animation: hide 0.35s both;
+
+  .menu{
+  display: flex;
+  flex-direction: column;
+  padding: 20px 30px;
+  border-radius: 15px;
+
+  a {
+    color: white;
+    margin: 20px;
+  }
+  }
 
   &.show {
     display: flex;
@@ -204,25 +217,3 @@ a {
   }
 }
 
-.menu {
-  display: flex;
-  flex-direction: column;
-  padding: 20px 30px;
-  border-radius: 15px;
-
-  a {
-    color: white;
-    margin: 20px;
-  }
-}
-
-.icon {
-  display: flex;
-  order: 1;
-  padding: 15px;
-
-  a {
-    width: 35px;
-    margin: 0 5px;
-  }
-}
