--- a/myproject/css/style.css
+++ b/myproject/css/style.css
@@ -628,6 +628,7 @@ footer .logo {
 footer div {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: flex-end;
 }
 footer div .navigation {
