--- a/myproject/scss/style.scss
+++ b/myproject/scss/style.scss
@@ -603,6 +603,7 @@ footer {
     div {
         display: flex;
         flex-direction: column;
+        justify-content: flex-end;
         align-items: flex-end;
 
         .navigation {
