--- a/Bootstrap/Zara Web/css/style.css
+++ b/Bootstrap/Zara Web/css/style.css
@@ -19,11 +19,6 @@
   padding-left: 1.5rem;
   /* 虛擬元素(裝飾) */
 }
-.heading::after {
-  content: "NEWS";
-  margin-left: 0.65rem;
-  font-weight: 600;
-}
 .heading::before {
   content: "";
   position: absolute;
@@ -80,4 +75,13 @@
   width: 100%;
 }
 
-/* 最新商品區 *//*# sourceMappingURL=style.css.map */
+/* 英文標題區  */
+/* 最新商品區 */
+#news .heading::after {
+  content: "NEWS";
+}
+
+/* 熱門商品區 */
+#hot .heading::after {
+  content: "HOT";
+}/*# sourceMappingURL=style.css.map */
