--- a/myproject/scss/style.scss
+++ b/myproject/scss/style.scss
@@ -629,17 +629,15 @@ footer {
         }
     }
 
-    #gotop{
+    #gotop {
         position: fixed;
         right: 20px;
         bottom: 20px;
-        z-index: $z-index-l;
-
+        z-index: 9999;
         width: 50px;
         height: 50px;
-        background-color: $lesser-3;
+        background-color: red;
         border-radius: 50%;
         cursor: pointer;
-
     }
 }
