--- a/myproject/React/assets/all.scss
+++ b/myproject/React/assets/all.scss
@@ -1,6 +1,6 @@
-$primary-bg:rgb(195,238,255);
+$primary-bg: rgb(195, 238, 255);
 
-body{
+body {
     background-color: $primary-bg;
 }
 
@@ -11,16 +11,18 @@ body{
     background-color: #333;
     color: #333;
 }
-a{
+
+a {
     // 底線標籤
-    text-decoration: underline; 
+    text-decoration: underline;
     color: red;
+
     &:hover {
         text-decoration: none;
     }
 }
 
-#ttpPanel{
+#ttpPanel {
     padding: 15px;
     width: 200px;
     text-align: left;
@@ -30,4 +32,12 @@ a{
     z-index: 99;
     background-color: #fff;
     display: none; // 記得設定這個不然會跑出範例
+}
+
+.wrapper2 {
+    // 紅色框框跟著視窗跑
+    max-width: 100vw;
+    height: 100vh;
+    margin: auto;
+
 }
