--- a/Bootstrap/Zara Web/css/style.css
+++ b/Bootstrap/Zara Web/css/style.css
@@ -172,6 +172,17 @@ img {
   display: flex;
 }
 
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
+  display: flex;
+  border: 1px solid #444;
+  background: transparent;
+}
+
 footer {
   height: 10vh;
   line-height: 10vh;
