--- a/Bootstrap/Zara Web/css/style.css
+++ b/Bootstrap/Zara Web/css/style.css
@@ -183,6 +183,10 @@ a.ui-button:active,
   background: transparent;
 }
 
+.ul-tabs .ui-tabs-nav .ui-tabs-anchor {
+  padding: 0;
+}
+
 footer {
   height: 10vh;
   line-height: 10vh;
